2014-08-04  Chris Fleizach  <cfleizach@apple.com>

        AX: isWordEndMatch should allow for multiple word selections
        https://bugs.webkit.org/show_bug.cgi?id=135573

        Reviewed by Mario Sanchez Prada.

        isWordEndMatch was searching from the beginning of the selected range, which meant
        that if the result was multiple words, we'd reject the result. 
        Instead, we should search from the end of the range, so that we encompass all words.

        Modified existing test: platform/mac/accessibility/select-text-should-match-whole-words.html

        * editing/TextIterator.cpp:
        (WebCore::SearchBuffer::isWordEndMatch):

2014-08-04  Chris Fleizach  <cfleizach@apple.com>

        AX: Secure text fields need to support Search parameterized attributes
        https://bugs.webkit.org/show_bug.cgi?id=135568

        Reviewed by Mario Sanchez Prada.
 
        Secure text fields still need to support the fast searching that WebKit exposes, even though they don't support
        other parameterized attributes.
  
        Test: platform/mac/accessibility/secure-text-field-supports-fast-search.html

        * accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
        (-[WebAccessibilityObjectWrapper accessibilityParameterizedAttributeNames]):

2014-08-04  Jer Noble  <jer.noble@apple.com>

        [MSE] Further fixes for "fast forward" playback after seeking in YouTube behavior.
        https://bugs.webkit.org/show_bug.cgi?id=135572

        Reviewed by Eric Carlson.

        Two related fixes:

        In reenqueueMediaForTime(), update TrackBuffer.lastEnqueuedPresentationTime when we flush samples, so that
        the next time samples are re-enqueued, the starting point for re-enqueueing is correct.

        In sourceBufferPrivateDidReceiveSample(), do not add samples to the decode queue if they are before the
        current media time.

        * Modules/mediasource/SourceBuffer.cpp: